--- a/src/style.css
+++ b/src/style.css
@@ -7,3 +7,24 @@
 }
 
 @import "tailwindcss";
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: 'Work Sans', sans-serif;
+}
+
+body,
+span,
+p,
+a,
+li,
+button,
+input,
+textarea,
+div {
+  font-family: 'Open Sans', sans-serif;
+}
