Create Hero Section

--- a/src/style.css
+++ b/src/style.css
@@ -31,6 +31,10 @@ div {
   font-family: 'Open Sans', sans-serif;
 }
 
+button {
+  cursor: pointer;
+}
+
 @theme inline {
   --radius-sm: calc(var(--radius) - 4px);
   --radius-md: calc(var(--radius) - 2px);
